# AI_Gateway

./: AGENTS.md  Cargo.toml  README.md  plan.md  配置说明.md
.cargo/: config.toml
.claude/: settings.local.json
config/: ban_rules.yaml  dev.yaml  test_conf.yaml  test_unit.yaml
config/data/apikeys/: key_1772505243012.yaml  key_1772526760247.yaml
config/data/routes/: conf.yaml  deepseek.yaml  kimi.yaml
data/: ban_logs.db  config.db
docs/: System Design.md  admin-ui-architecture-proposal.md  admin-ui-design-proposal.md  api_key_architecture_design.md  ip-metrics-design.md  small-packet-performance-analysis.md  sse_performance_analysis.md  stability_analysis_report.md
logs/: metrics
src/: admin.rs  auth.rs  concurrency.rs  config.rs  config_storage.rs  install.rs  lib.rs  main.rs  observability.rs  proxy.rs  ratelimit.rs  server.rs  tls.rs  token_extractor.rs  token_quota.rs  token_stats.rs  token_stats_storage.rs
src/admin/static/: app.js  index.html  login.html  login.js  styles.css
src/api_keys/: ban.rs  ban_log.rs  manager.rs  mod.rs
tests/: gateway_e2e.rs  inbound_tls_e2e.rs  smoke.rs
