[package]
name = "ai-gw-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http1", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "socks"] }
rcgen = "0.13"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "time"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
