[package]
name = "ai-gw-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http1", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
prometheus-client = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "socks"] }
rcgen = "0.13"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11", features = ["v7", "fast-rng"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
